--- a/main.scss
+++ b/main.scss
@@ -70,6 +70,36 @@ html, body {
           height: auto;
           resize: none;
         }
+        .upload-file {
+          .text {
+            display: flex;
+            height: 50px;
+            align-items: center;
+            border: 1px solid rgba(#fff, .5);
+            border-radius: 3px;
+            margin-bottom: 10px;
+            padding: 0 14px;
+            cursor: pointer;
+            font-size: 20px;
+            &:hover {
+              border-color: #fff;
+            }
+            &::before {
+              content: attr(data-invalid);
+            }
+          }
+          input {
+            display: none;
+            &:valid + .text {
+              border-color: #1eba1e;
+              background: url("img/check.svg") no-repeat calc(100% - 15px);
+              background-size: 35px;
+              &::before {
+                content: attr(data-valid);
+              }
+            }
+          }
+        }
         .radio {
           .text {
             display: flex;
