Added new style.

--- a/main.scss
+++ b/main.scss
@@ -37,7 +37,7 @@ html, body {
     align-items: center;
     justify-content: center;
     .lds-spinner {
-      color: white;
+      color: official;
       display: inline-block;
       position: relative;
       width: 80px;
